--- a/homework08/docker-compose.yaml
+++ b/homework08/docker-compose.yaml
@@ -5,9 +5,9 @@ services:
     redis-db:
         image: redis:7
         ports:
-            - 6379:6379
+        - 6379:6379
         volumes:
-            - ./data:/data
+        - ./data/:/data/
         user: "1000:1000"
     flask-app:
         build:
@@ -17,7 +17,7 @@ services:
             - redis-db
         image: avlavelle/gene_api
         environment:
-          - REDIS_IP=avlav-test-redis-service
+          - REDIS_IP=redis-db
         ports:
             - 5000:5000
         
