--- a/homework08/avlav-test-flask-deployment.yml
+++ b/homework08/avlav-test-flask-deployment.yml
@@ -18,10 +18,11 @@ spec:
     spec:
       containers:
         - name: flaskdeploys
+          imagePullPolicy: Always
           image: avlavelle/gene_api
           env:
-          - name: FLASK_APP
-            value: 'gene_api.py'
+          - name: REDIS_IP
+            value: avlav-test-redis-service
           ports:
           - name: http
             containerPort: 5000
